prueba_tecnica_teimas/Terraform/import-resources/sec_group.tf
resource "aws_security_group" "sg_teimas" {
  vpc_id      = aws_vpc.vpc_teimas.id
  name        = "sec_group_teimas"
  description = "Allow inbound traffic from port 22 and 80"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress{
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sec_group_teimas"
  }
}
